; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/nodes/decompress_chunk/extr_qual_pushdown.c_make_segment_meta_opexpr.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/nodes/decompress_chunk/extr_qual_pushdown.c_make_segment_meta_opexpr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32, i32 }

@InvalidOid = common dso_local global i32 0, align 4
@BOOLOID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_9__*, i32, i32, %struct.TYPE_8__*, i32*, i32)* @make_segment_meta_opexpr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @make_segment_meta_opexpr(%struct.TYPE_9__* %0, i32 %1, i32 %2, %struct.TYPE_8__* %3, i32* %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_8__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store %struct.TYPE_8__* %3, %struct.TYPE_8__** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @InvalidOid, align 4
  %24 = call %struct.TYPE_8__* @makeVar(i32 %18, i32 %19, i32 %22, i32 -1, i32 %23, i32 0)
  store %struct.TYPE_8__* %24, %struct.TYPE_8__** %13, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* @BOOLOID, align 4
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %28 = bitcast %struct.TYPE_8__* %27 to i32*
  %29 = load i32*, i32** %11, align 8
  %30 = call i32 @copyObject(i32* %29)
  %31 = load i32, i32* @InvalidOid, align 4
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i64 @make_opclause(i32 %25, i32 %26, i32 0, i32* %28, i32 %30, i32 %31, i32 %34)
  %36 = inttoptr i64 %35 to i32*
  ret i32* %36
}

declare dso_local %struct.TYPE_8__* @makeVar(i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @make_opclause(i32, i32, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @copyObject(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
